# hachimi-template

./: Cargo.toml  README.md
src/: lib.rs
src/android/: game_impl.rs  hachimi_impl.rs  hook.rs  log_impl.rs  mod.rs
src/android/zygisk/: main.rs
src/core/: error.rs  game.rs  hachimi.rs  mod.rs  utils.rs
src/il2cpp/: api.rs  ext.rs  mod.rs  symbols.rs  types.rs  unity_types.rs  utils.rs
src/il2cpp/hook/: bootstrap.rs  mod.rs
src/il2cpp/hook/UnityEngine_CoreModule/: Scene.rs  SceneManager.rs  mod.rs
src/windows/: game_impl.rs  hachimi_impl.rs  hook.rs  main.rs  mod.rs  utils.rs
src/windows/proxy/: exports.def  mod.rs
tools/android/: build_zygisk.sh
