[package]
name = "hachimi"
version = "0.1.0"
rust-version = "1.77"
edition = "2021"

[lib]
name = "hachimi"
crate-type = ["cdylib"]

[profile.release]
strip = true

[profile.dev]
debug = "limited"

[dependencies]
log = "0.4"
cstr = "0.2"
once_cell = "1.19"
arc-swap = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fnv = "1.0"
widestring = "1.1"

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"
android_logger = "0.15"
procfs = "0.18"
jni = "0.21"
dobby-rs = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windebug_logger = "0.1"
minhook = "0.9"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62"
features = [
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
]

[build-dependencies]
tauri-winres = "0.1"
cc = "1.1"

[package.metadata.tauri-winres]
ProductName = "Mod Template"
FileDescription = "Powered by Hachimi"

[patch.crates-io]
dobby-sys = { git = "https://github.com/LeadRDRK/dobby-sys.git", rev = "d1a4b94a05b33251c8e6ca91ca004a6ae7078acb" }
embed-resource = { git = "https://github.com/nabijaczleweli/rust-embed-resource.git", rev = "e98e9aa28d66b0c2ff43516b41847cac372310dd" }